League editor length solution

--- a/SimTECH/SimTECH/Pages/Leagues/LeagueEditor.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/LeagueEditor.razor
@@ -6,8 +6,8 @@
         <MudForm Model="@model">
             <MudGrid>
                 <MudItem xs="12">
-                    <MudTextField T="string" @bind-Value="model.Name" Label="Name" />
-                    <MudNumericField T="int" @bind-Value="model.RaceLength" Step="10" Label="RaceLength" HelperText="Should round to nearest ten" Validation="@(new Func<int, string>(LengthValidator))" />
+                    <MudTextField T="string" @bind-Value="model.Name" Label="Name" Class="field-md" />
+                    <MudNumericField T="int" @bind-Value="model.RaceLength" Step="10" Label="RaceLength" HelperText="Should round to nearest ten" Validation="@(new Func<int, string>(LengthValidator))" Class="field-md" />
                 </MudItem>
                 <MudItem xs="6">
                     <MudPaper Elevation="5" Class="pa-4">
@@ -19,7 +19,7 @@
                 <MudItem xs="6">
                     <MudPaper Elevation="5" Class="pa-4">
                         <RangeInput Items="_ageRanges" RangeType="RangeType.Age">
-                            <MudText Typo="Typo.h6">">Age</MudText>
+                            <MudText Typo="Typo.h6">Age</MudText>
                         </RangeInput>
                     </MudPaper>
                 </MudItem>
@@ -33,7 +33,7 @@
                 <MudItem xs="6">
                     <MudPaper Elevation="5" Class="pa-4">
                         <RangeInput Items="_engineRanges" RangeType="RangeType.Engine">
-                            <MudText Typo="Typo.h6">">Engine</MudText>
+                            <MudText Typo="Typo.h6">Engine</MudText>
                         </RangeInput>
                     </MudPaper>
                 </MudItem>
