--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -15,6 +15,7 @@
         <Columns>
             <HierarchyColumn T="League" />
             <PropertyColumn Property="e => e.Name" />
+            <PropertyColumn Property="e => e.RaceLength" />
             <PropertyColumn Property="e => e.State" />
             <TemplateColumn CellClass="d-flex justify-end">
                 <CellTemplate>
