--- a/SimTECH/SimTECH/Pages/Season/Seasons.razor
+++ b/SimTECH/SimTECH/Pages/Season/Seasons.razor
@@ -19,11 +19,12 @@
             <TemplateColumn CellClass="d-flex justify end">
                 <CellTemplate>
                     <MudButtonGroup Size="@Size.Small">
-                        <MudIconButton Icon="@Icons.Material.Outlined.ContentCopy" OnClick="@(async () => await UpdateSeason(context.Item))" />
+                        <MudIconButton Icon="@Icons.Material.Outlined.ContentCopy" OnClick="@(async () => await CopySeason(context.Item))" />
                         <MudIconButton Icon="@Icons.Material.Outlined.Logout" OnClick="@(() => GoToOverview(context.Item.Id))" />
                         @if (context.Item.State == State.Concept)
                         {
-                            <MudIconButton Color="Color.Error" Icon="@Icons.Material.Outlined.Delete" OnClick="@(() => DeleteSeason(context.Item))" />
+                            <MudIconButton Color="Color.Error" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateSeason(context.Item))" />
+                            <MudIconButton Color="Color.Error" Icon="@Icons.Material.Outlined.Delete" OnClick="@(async() => await DeleteSeason(context.Item))" />
                         }
                     </MudButtonGroup>
                 </CellTemplate>
