--- a/SimTECH/SimTECH/Pages/Season/SeasonEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonEditor.razor
@@ -1,42 +1,49 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText>Are you sure you want to create a new season with these settings?</MudText>
+        <MudText>Create a new season with the following settings</MudText>
     </TitleContent>
     <DialogContent>
         <MudForm Model="@model">
             <MudGrid Spacing="2">
-                <MudItem xs="6">
-                    <MudPaper Elevation="5">
-                        <MudText Typo="Typo.subtitle1">Season information</MudText>
-                        <MudDivider />
-                        <MudNumericField T="int" @bind-Value="model.Year" Label="Year" Class="field-sm" />
-
-                        <MudText Typo="Typo.subtitle1">Qualifying (and practice) settings</MudText>
-                        <MudDivider />
-                        <MudNumericField T="int" @bind-Value="model.RunAmountSession" Label="Amount of runs per session" Class="field-sm" />
-                        <MudNumericField T="int" @bind-Value="model.QualifyingRNG" Label="Maximum RNG for qualifying" Class="field-sm" />
-                        <MudStack Row="true" Spacing="4">
-                            <MudNumericField T="int" @bind-Value="model.QualifyingAmountQ2" Label="Amount of drivers in Q2" Class="field-sm" />
-                            <MudNumericField T="int" @bind-Value="model.QualifyingAmountQ3" Label="Amount of drivers in Q3" Class="field-sm" />
+                <MudItem xs="8">
+                    <MudPaper Elevation="5" Class="pa-4">
+                        <MudStack Spacing="6">
+                            <div>
+                                <MudText Typo="Typo.subtitle1">Season information</MudText>
+                                <MudDivider />
+                                <MudNumericField T="int" @bind-Value="model.Year" Label="Year" Class="field-sm" />
+                            </div>
+                            <div>
+                                <MudText Typo="Typo.subtitle1">Qualifying (and practice) settings</MudText>
+                                <MudDivider />
+                                <MudNumericField T="int" @bind-Value="model.RunAmountSession" Label="Amount of runs per session" Class="field-md" />
+                                <MudNumericField T="int" @bind-Value="model.QualifyingRNG" Label="Maximum RNG for qualifying" Class="field-md" />
+                                <MudStack Row="true" Spacing="4">
+                                    <MudNumericField T="int" @bind-Value="model.QualifyingAmountQ2" Label="Amount of drivers in Q2" Class="field-md" />
+                                    <MudNumericField T="int" @bind-Value="model.QualifyingAmountQ3" Label="Amount of drivers in Q3" Class="field-md" />
+                                </MudStack>
+                            </div>
+                            <div>
+                                <MudText Typo="Typo.subtitle1">Race settings</MudText>
+                                <MudDivider />
+                                <MudStack Row="true" Spacing="4">
+                                    <MudNumericField T="int" @bind-Value="model.PitMinimum" Label="Pit Min. RNG" Class="field-md" />
+                                    <MudNumericField T="int" @bind-Value="model.PitMaximum" Label="Pit Max. RNG" Class="field-md" />
+                                </MudStack>
+                                <MudNumericField T="int" @bind-Value="model.MaximumDriversInRace" Label="Maximum allowed drivers in race" Class="field-md" />
+                                <MudNumericField T="int" @bind-Value="model.GridBonus" Label="Bonus per grid position" Class="field-md" />
+                            </div>
+                            <div>
+                                <MudText Typo="Typo.subtitle1">Additional points</MudText>
+                                <MudDivider />
+                                <MudNumericField T="int" @bind-Value="model.PointsPole" Label="Awarded points Pole" Class="field-md" />
+                                <MudNumericField T="int" @bind-Value="model.PointsFastestLap" Label="Awarded points Fastest Lap" Class="field-md" />
+                            </div>
                         </MudStack>
-
-                        <MudText Typo="Typo.subtitle1">Race settings</MudText>
-                        <MudDivider />
-                        <MudStack Row="true" Spacing="4">
-                            <MudNumericField T="int" @bind-Value="model.PitMinimum" Label="Pit Min. RNG" Class="field-sm" />
-                            <MudNumericField T="int" @bind-Value="model.PitMaximum" Label="Pit Max. RNG" Class="field-sm" />
-                        </MudStack>
-                        <MudNumericField T="int" @bind-Value="model.MaximumDriversInRace" Label="MaximumDriversInRace" Class="field-sm" />
-                        <MudNumericField T="int" @bind-Value="model.GridBonus" Label="Bonus per grid position" Class="field-sm" />
-                        
-                        <MudText Typo="Typo.subtitle1">Additional points</MudText>
-                        <MudDivider />
-                        <MudNumericField T="int" @bind-Value="model.PointsPole" Label="Awarded points Pole" Class="field-sm" />
-                        <MudNumericField T="int" @bind-Value="model.PointsFastestLap" Label="Awarded points Fastest Lap" Class="field-sm" />
 
                         <MudNumericField T="long" @bind-Value="model.LeagueId" Label="League ID" />
 
-                        @if (Copied ?? false)
+                        @if (Copied)
                         {
                             <MudCheckBox @bind-Checked="_copyRaces" Color="Color.Tertiary" Label="Copy all races from this season" />
                             @if (_copyRaces)
@@ -44,12 +51,16 @@
                                 <MudAlert Severity="Severity.Warning">Sorry! Feature isn't implemented yet.</MudAlert>
                             }
                         }
+                        else
+                        {
+                            <MudText>dumb and gay</MudText>
+                        }
                     </MudPaper>
                 </MudItem>
 
-                <MudItem xs="6">
-                    <MudPaper Elevation="5">
-                        <MudText Typo="Typo.subtitle1">Setting points per position</MudText>
+                <MudItem xs="4">
+                    <MudPaper Elevation="5" Class="pa-4">
+                        <MudText Typo="Typo.subtitle1">Achieved points per position</MudText>
                         <MudDivider />
 
                         <MudTable Items="@model.PointAllotments" Dense="true" ReadOnly="false"
@@ -99,7 +110,7 @@
     [CascadingParameter] protected MudDialogInstance? SeasonDialog { get; set; }
 
     [Parameter] public Season? Season { get; set; }
-    [Parameter] public bool? Copied { get; set; }
+    [Parameter] public bool Copied { get; set; }
 
     private EditSeasonModel model = new();
     private EditPointAllotmentModel allotmentBackup;
@@ -116,7 +127,7 @@
             if (model.PointAllotments.Any())
                 _lowestPosition = model.PointAllotments.Max(e => e.Position);
 
-            if (Copied.GetValueOrDefault())
+            if (Copied)
                 model.ResetIdentifierFields();
         }
 
