--- a/SimTECH/SimTECH/Pages/Setup/EngineEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/EngineEditor.razor
@@ -1,8 +1,6 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText>
-            Add new engine
-        </MudText>
+        <MudText>Modify engine</MudText>
     </TitleContent>
     <DialogContent>
         <MudForm Model="@model">
