--- a/SimTECH/SimTECH/Pages/Setup/TeamEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TeamEditor.razor
@@ -6,15 +6,18 @@
         <MudForm Model="@model">
             <MudGrid>
                 <MudItem xs="8">
-                    <MudPaper Elevation="15">
-                        <MudTextField T="string" @bind-Value="@model.Name" Label="Name" />
-                        <MudCountrySelect @bind-Value="model.Country" />
-                        <MudTextField T="string" @bind-Value="@model.Biography" Label="Biography" />
+                    <MudPaper Elevation="15" Class="pa-4">
+                        <MudStack>
+                            <MudTextField T="string" @bind-Value="@model.Name" Label="Name" Class="field-md" />
+                            <MudCountrySelect @bind-Value="model.Country" Class="field-md" />
+                            <MudTextField T="string" @bind-Value="@model.Biography" Label="Biography" Lines="5" />
+                        </MudStack>
                     </MudPaper>
                 </MudItem>
+
                 <MudItem xs="4">
-                    <MudPaper Elevation="10">
-                        Traits bla bla
+                    <MudPaper Elevation="10" Class="pa-4">
+                        <MudText Typo="Typo.subtitle1">Traits</MudText>
                         <MudChipSet @bind-SelectedValues="selectedTraits" MultiSelection="true" Filter="true">
                             @foreach (var trait in Traits)
                             {
