--- a/SimTECH/SimTECH/Pages/Leagues/LeagueEditor.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/LeagueEditor.razor
@@ -1,6 +1,9 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText>Add new league</MudText>
+        <MudText>Modify league</MudText>
+        <MudText>Keep in mind that race length is used to determine the amount of calcuations each race,
+            which is why we round to 10 since every ten decimals amounts to one additional calculation.
+        </MudText>
     </TitleContent>
     <DialogContent>
         <MudForm Model="@model" @ref="form">
