--- a/SimTECH/SimTECH/Pages/Setup/TraitEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TraitEditor.razor
@@ -30,9 +30,7 @@
                     <MudDivider />
                 </MudItem>
                 <MudItem xs="3">
-                    <MudNumericField T="int" @bind-Value="model.DriverPace" Label="DriverPace" />
-                    <MudNumericField T="int" @bind-Value="model.CarPace" Label="CarPace" />
-                    <MudNumericField T="int" @bind-Value="model.EnginePace" Label="EnginePace" />
+                    <MudNumericField T="int" @bind-Value="model.RacePace" Label="RacePace" />
                 </MudItem>
                 <MudItem xs="3">
                     <MudNumericField T="int" @bind-Value="model.DriverReliability" Label="DriverReliability" />
