--- a/SimTECH/SimTECH/Pages/Setup/Traits.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Traits.razor
@@ -42,17 +42,7 @@
                         </MudItem>
                         <MudItem xs="3">
                             <MudPaper Class="d-flex align-center justify-center mud-width-full py-8">
-                                <MudText>Driver pace: @(context.Item.DriverPace)</MudText>
-                            </MudPaper>
-                        </MudItem>
-                        <MudItem xs="3">
-                            <MudPaper Class="d-flex align-center justify-center mud-width-full py-8">
-                                <MudText>Car pace: @(context.Item.CarPace)</MudText>
-                            </MudPaper>
-                        </MudItem>
-                        <MudItem xs="3">
-                            <MudPaper Class="d-flex align-center justify-center mud-width-full py-8">
-                                <MudText>Engine pace: @(context.Item.EnginePace)</MudText>
+                                <MudText>Driver pace: @(context.Item.RacePace)</MudText>
                             </MudPaper>
                         </MudItem>
                         <MudItem xs="3">
