--- a/SimTECH/SimTECH/Pages/Factors/StrategyEditor.razor
+++ b/SimTECH/SimTECH/Pages/Factors/StrategyEditor.razor
@@ -1,19 +1,19 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText>
-            Add new strategy (redo this page since race changed!)
-        </MudText>
+        <MudText>Modify strategy</MudText>
     </TitleContent>
     <DialogContent>
         <MudGrid>
             <MudItem xs="6">
-                <MudPaper>
+                <MudPaper Elevation="15" Class="pa-4">
                     <MudTable T="EditStrategyTyreModel" Items="@model.StrategyTyres">
                         <HeaderContent>
+                            <MudTh>Order</MudTh>
                             <MudTh>Tyre</MudTh>
                             <MudTh></MudTh>
                         </HeaderContent>
                         <RowTemplate>
+                            <MudTd DataLabel="Order">@context.Order</MudTd>
                             <MudTd DataLabel="Tyre">
                                 <span class="tyre" style="border-color:@(context.Tyre.Colour)">
                                     @context.Tyre.Name.ElementAt(0)
@@ -28,23 +28,30 @@
             </MudItem>
 
             <MudItem xs="6">
-                <MudPaper>
-                    <MudTable T="Tyre" Items="@Tyres" OnRowClick="AppendTyreToStrategy" Hover="true">
-                        <HeaderContent>
-                            <MudTh>Tyre</MudTh>
-                            <MudTh>Length</MudTh>
-                            <MudTh>Pace</MudTh>
-                            <MudTh>Wear</MudTh>
-                        </HeaderContent>
-                        <RowTemplate>
-                            <MudTd DataLabel="Tyre">
-                                <span class="tyre" style="border-color:@(context.Colour)">@context.Name.ElementAt(0)</span>
-                            </MudTd>
-                            <MudTd DataLabel="Length">@context.Length</MudTd>
-                            <MudTd DataLabel="Pace">@context.Pace</MudTd>
-                            <MudTd DataLabel="Wear">@context.WearMax ↔ @context.WearMin</MudTd>
-                        </RowTemplate>
-                    </MudTable>
+                <MudPaper Elevation="15" Class="pa-4">
+                    @if (Tyres == null || Tyres.Count == 0)
+                    {
+                        <MudAlert>Consider making some tyres before attempting to create a strategy, idiot</MudAlert>
+                    }
+                    else
+                    {
+                        <MudTable T="Tyre" Items="@Tyres" OnRowClick="AppendTyreToStrategy" Hover="true">
+                            <HeaderContent>
+                                <MudTh>Tyre</MudTh>
+                                <MudTh>Length</MudTh>
+                                <MudTh>Pace</MudTh>
+                                <MudTh>Wear</MudTh>
+                            </HeaderContent>
+                            <RowTemplate>
+                                <MudTd DataLabel="Tyre">
+                                    <span class="tyre" style="border-color:@(context.Colour)">@context.Name.ElementAt(0)</span>
+                                </MudTd>
+                                <MudTd DataLabel="Length">@context.Length</MudTd>
+                                <MudTd DataLabel="Pace">@context.Pace</MudTd>
+                                <MudTd DataLabel="Wear">@context.WearMax ↔ @context.WearMin</MudTd>
+                            </RowTemplate>
+                        </MudTable>
+                    }
                 </MudPaper>
             </MudItem>
         </MudGrid>
@@ -56,22 +63,22 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter]
-    protected MudDialogInstance? StrategyDialog { get; set; }
+    [CascadingParameter] protected MudDialogInstance? StrategyDialog { get; set; }
 
-    [Parameter]
-    public Strategy? Strategy { get; set; } = new();
-
-    [Parameter]
-    public List<Tyre> Tyres { get; set; } = new();
+    [Parameter] public Strategy? Strategy { get; set; }
+    [Parameter] public List<Tyre> Tyres { get; set; }
 
     private EditStrategyModel model = new();
+    private int orderMax = 0;
 
     protected override void OnInitialized()
     {
         if (Strategy != null)
         {
             model = new EditStrategyModel(Strategy);
+
+            if (model.StrategyTyres?.Any() == true)
+                orderMax = model.StrategyTyres.Max(e => e.Order);
         }
     }
 
@@ -81,9 +88,10 @@
 
         var appendedStrategyTyre = new EditStrategyTyreModel
         {
+            Order = ++orderMax,
             TyreId = tyre.Id,
             Tyre = tyre,
-            StrategyId = model.Id
+            StrategyId = model.Id,
         };
 
         model.StrategyTyres.Add(appendedStrategyTyre);
@@ -91,7 +99,22 @@
 
     private void RemoveTyreFromStrategy(EditStrategyTyreModel strategyTyre)
     {
+        --orderMax;
+
         model.StrategyTyres.Remove(strategyTyre);
+
+        ReorderTyres();
+    }
+
+    private void ReorderTyres()
+    {
+        if (model.StrategyTyres?.Any() == true)
+        {
+            int indexer = 0;
+
+            foreach (var strategyTyre in model.StrategyTyres)
+                strategyTyre.Order = ++indexer;
+        }
     }
 
     private void Submit()
